--- a/src/styles/components/Inputs.module.scss
+++ b/src/styles/components/Inputs.module.scss
@@ -10,7 +10,8 @@
     padding: 20px 50px;
   }
   @media (max-width: 576px) {
-    padding: 20px 0;
+    font-size: 22px;
+    padding: 5px 0;
   }
 }
 .wrapper {
