--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,7 +1,6 @@
 @import './_null.scss';
 @import './_fonts.scss';
 
-$min: violet;
 $primary: grey;
 $input-range: black;
 $base: white;
@@ -27,15 +26,14 @@ $hover: #d3d3d3;
 }
 
 body {
-  @include flex-column;
-  min-height: 100vh;
+  
   font-family: "Roboto-Regular", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
 
 .wrapper {
-  width: calc(100% - 10px);
+  min-width: calc(100% - 10px);
 
   @media (min-width: 576px) {
     width: 540px;
@@ -58,8 +56,8 @@ body {
   }
 }
 .container {
-  min-width: 100vh;
   @include flex-column;
+  justify-content: flex-end;
   @media (max-width: 768px) {
     flex-direction: column-reverse;
   }
