--- a/src/styles/components/Diagram.module.scss
+++ b/src/styles/components/Diagram.module.scss
@@ -33,7 +33,8 @@
         padding: 0;
       }
       @media (max-width: 576px) {
-        font-size: 18px;
+        font-size: 16px;
+        letter-spacing: 0px;
       }
       @media (max-width: 380px) {
         font-size: 14px;
@@ -50,10 +51,10 @@
     @media (max-width: 768px) {
       width: 120px;
       height: 40px;
-      margin: 10px;
+      margin: 5px;
     }
     @media (max-width: 576px) {
-      width: 82px;
+      width: 72px;
       height: 25px;
       margin: 10px 1px;
     }
@@ -76,7 +77,7 @@
     @include flex-row;
     justify-content: flex-start;
     width: calc(100% - 310px);
-    height: 135px;
+    height: 110px;
     border-left: 4px solid $input-range;
     border-bottom: none;
     @media (max-width: 768px) {
@@ -90,13 +91,11 @@
     }
     &_dia {
       height: 36px;
-      width: 15px; // value
       @include border;
       border-left: none;
       background-color: $primary;
       @media (max-width: 768px) {
         width: 36px;
-        height: 15px;
         @include border;
         border-bottom: none;
       }
@@ -107,9 +106,9 @@
       font-weight: 700;
       margin: 10px;
       @media (max-width: 768px) {
-        font-size: 22px;
-        rotate: -90deg;
-        margin-bottom: 26px;
+        font-size: 18px;
+        transform: rotate(-90deg);
+        margin: 0 0 26px 0;
       }
     }
 
