--- a/src/styles/forms/InputRadio.module.scss
+++ b/src/styles/forms/InputRadio.module.scss
@@ -12,7 +12,7 @@
   position: relative;
   align-items: center;
   @media (max-width: 576px) {
-    height: 12px;
+    height: 10px;
   }
   @media (max-width: 380px) {
     flex-direction: column;
@@ -29,7 +29,8 @@
       border-width: 6px;
       cursor: default;
       @media (max-width: 576px) {
-      border-width: 4px;
+      background-color: $input-range;
+      border-width: 1px;
       }
     }
   }
@@ -50,13 +51,9 @@
     box-sizing: border-box;
     transition: .5s all;
     @media (max-width: 576px) {
-      height: 12px;
-      width: 12px;
-      margin: 0 1px;
-    }
-    @media (max-width: 380px) {
       height: 10px;
       width: 10px;
+      margin: 0 1px;
     }
     &:hover {
       background-color: $hover;
@@ -67,10 +64,11 @@
   font-size: 14px;
   margin-right: 8px;
   @media (max-width: 576px) {
-    font-size: 12px;
-    margin-right: 1px;
+    font-size: 10px;
+    min-width: 25px;
   }
   @media (max-width: 380px) {
-    font-size: 10px;
+    
+    text-align: center;
   }
 }
